data/derived/sp14/progs/unify/prog3728.ml.out
Characters 32-38:
  let f a x = a + x**2.0 in
                  ^^^^^^
Error: This expression has type float but an expression was expected of type
         int
